--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sonner": "^2.0.7",
     "swr": "^2.4.0",
     "tailwind-merge": "^3.5.0",
+    "use-debounce": "^10.1.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
